@@ -1286,9 +1286,6 @@ operator|+
 literal|" )"
 argument_list|,
 name|docOut
-operator|.
-name|toString
-argument_list|()
 argument_list|)
 throw|;
 block|}
