@@ -614,6 +614,8 @@ return|return
 operator|new
 name|RAMOutputStream
 argument_list|(
+name|name
+argument_list|,
 name|file
 argument_list|,
 literal|true
