@@ -717,6 +717,15 @@ name|IndexOutput
 name|io
 parameter_list|)
 block|{
+name|super
+argument_list|(
+literal|"SlowIndexOutput("
+operator|+
+name|io
+operator|+
+literal|")"
+argument_list|)
+expr_stmt|;
 name|this
 operator|.
 name|io
