@@ -7139,6 +7139,69 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|// LUCENE-6084
+DECL|method|testIndexOutputToString
+specifier|public
+name|void
+name|testIndexOutputToString
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+name|Directory
+name|dir
+init|=
+name|getDirectory
+argument_list|(
+name|createTempDir
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|IndexOutput
+name|out
+init|=
+name|dir
+operator|.
+name|createOutput
+argument_list|(
+literal|"camelCase.txt"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|out
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|out
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"camelCase.txt"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|out
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
