@@ -118,10 +118,15 @@ decl_stmt|;
 DECL|method|ReusedBufferedIndexOutput
 specifier|public
 name|ReusedBufferedIndexOutput
-parameter_list|()
+parameter_list|(
+name|String
+name|resourceDescription
+parameter_list|)
 block|{
 name|this
 argument_list|(
+name|resourceDescription
+argument_list|,
 name|BUFFER_SIZE
 argument_list|)
 expr_stmt|;
@@ -130,10 +135,18 @@ DECL|method|ReusedBufferedIndexOutput
 specifier|public
 name|ReusedBufferedIndexOutput
 parameter_list|(
+name|String
+name|resourceDescription
+parameter_list|,
 name|int
 name|bufferSize
 parameter_list|)
 block|{
+name|super
+argument_list|(
+name|resourceDescription
+argument_list|)
+expr_stmt|;
 name|checkBufferSize
 argument_list|(
 name|bufferSize
